--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "description": "Material Components Web Components",
   "license": "Apache-2.0",
   "scripts": {
-    "changelog": "standard-changelog -i CHANGELOG.md -k packages/material-components-web/package.json -w",
     "clean": "del-cli build/** build .closure-tmp/** .closure-tmp packages/*/node_modules packages/*/package-lock.json",
-    "dist": "npm run build && npm run build:min",
     "dev": "polyserve --npm --module-resolution=node",
-    "fix": "npm-run-all --parallel fix:*",
-    "lint:js": "eslint packages test scripts webpack.config.js demos/webpack.config.js karma.conf.js",
     "lint:imports": "node scripts/check-imports.js",
-    "lint": "npm-run-all --parallel lint:*",
     "test": "karma start --single-run",
     "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
     "build": "npm run build-styling && npm run build-typescript",
@@ -21,52 +16,37 @@
     "watch": "npm run bootstrap && node scripts/watcher.js"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.0.1",
+    "@webcomponents/webcomponentsjs": "^2.2.4",
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-traverse": "^6.24.1",
-    "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
     "chai": "^4.2.0",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "del-cli": "^1.1.0",
     "dom5": "^3.0.0",
-    "eslint": "^4.10.0",
-    "eslint-config-google": "^0.8.1",
-    "eslint-plugin-mocha": "^4.8.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "fs-extra": "^5.0.0",
     "glob": "^7.1.1",
-    "google-closure-compiler": "^20170521.0.0",
-    "istanbul": "^0.4.4",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "karma": "^2.0.0",
+    "karma": "^4.0.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-sauce-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-tap": "^4.0.0",
-    "karma-webpack": "^2.0.4",
+    "karma-rollup-preprocessor": "^6.1.2",
+    "karma-sauce-launcher": "^2.0.2",
     "lerna": "^2.9.0",
     "mocha": "^5.0.0",
     "node-sass-import": "^2.0.1",
-    "node-watch": "^0.5.8",
-    "npm-run-all": "^4.1.5",
-    "parse5": "^4.0.0",
-    "polyserve": "^0.27.10",
+    "node-watch": "^0.6.0",
+    "parse5": "^5.1.0",
+    "polyserve": "^0.27.15",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "sass": "^1.14.1",
-    "typescript": "^3.2.2",
-    "webpack": "^3.9.0",
-    "webpack-dev-server": "^2.4.3"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "sass": "^1.16.1",
+    "typescript": "^3.2.4"
   },
   "babel": {
     "presets": [
