--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -11,8 +11,8 @@ parserOptions:
   ecmaVersion: 2017
   sourceType: module
 rules:
-  indent: [error, 2]
-  max-len: [error, 120]
+  indent: [warn, 2]
+  max-len: [warn, 120]
   no-new: warn
   quotes: [error, single, {"avoidEscape": true}]
   no-var: error
@@ -42,3 +42,9 @@ rules:
   mocha/no-pending-tests: error
   mocha/no-skipped-tests: error
   mocha/valid-suite-description: [error, ^MDC.+|^webpack|^mwc-.+]
+overrides:
+  - files: ["packages/**/*.ts"]
+    rules:
+      no-unused-vars: off
+      no-invalid-this: off
+      new-cap: off
