--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "clean:styles": "del-cli packages/*/src/*-css.ts",
     "dev": "polyserve --npm --module-resolution=node",
     "lint:imports": "node scripts/check-imports.js",
+    "lint": "npm run lint:typescript",
     "lint:typescript": "eslint \"packages/**/*.ts\"",
     "test": "karma start --single-run",
     "test:bench": "node test/benchmark/cli.js",
     "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
-    "build": "npm run build:styling && npm run build:typescript -- --verbose",
+    "build": "npm run lint && npm run build:styling && npm run build:typescript -- --verbose",
     "build:styling": "./scripts/build-styling.sh",
     "build:typescript": "tsc --build packages/**/tsconfig.json",
     "build:tests": "tsc --build test/tsconfig.json && tsc --build test/tsconfig-node.json",
