--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -15,7 +15,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/drawer": "^1.0.0",
-    "@material/mwc-base": "^0.5.0"
+    "@material/mwc-base": "^0.5.0",
+    "blocking-elements": "^0.0.2",
+    "wicg-inert": "^2.1.0"
   },
   "publishConfig": {
     "access": "public"
