chore: add `repository.directory` in `package.json` for all packages
This is the new way to mark a package in a monorepo.
See [repository.directory](https://docs.npmjs.com/files/package.json#repository) property in `package.json`.
In a future release of `npmjs.com` this will allow to link directly to a package in a monorepo.

https://docs.npmjs.com/files/package.json#repository
https://github.com/npm/rfcs/blob/latest/implemented/0010-monorepo-subdirectory-declaration.md

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -5,7 +5,8 @@
   "main": "mwc-button.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/material-components/material-components-web-components.git"
+    "url": "https://github.com/material-components/material-components-web-components.git",
+    "directory": "packages/button"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
