--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -3,6 +3,11 @@
   "version": "0.6.0",
   "description": "",
   "main": "mwc-icon-button.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/material-components/material-components-web-components.git",
+    "directory": "packages/icon-button"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
