--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/material-components/material-components-web-components.git"
+    "url": "https://github.com/material-components/material-components-web-components.git",
+    "directory": "packages/base"
   },
   "license": "Apache-2.0",
   "dependencies": {
