--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -5,7 +5,8 @@
   "main": "mwc-switch.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/material-components/material-components-web-components.git"
+    "url": "https://github.com/material-components/material-components-web-components.git",
+    "directory": "packages/switch"
   },
   "author": "",
   "license": "Apache-2.0",
