create a benchmark cli

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ node_modules
 /packages/*/package-lock.json
 .tsbuildinfo
 !packages/*/custom_types/**
+/test/benchmark/**/*.js
+/test/benchmark/**/*.js.map
+/test/benchmark/**/*.d.ts
