--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:tests": "tsc --build test/tsconfig.json && tsc --build test/tsconfig-node.json",
     "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh",
     "watch": "npm run bootstrap && node scripts/watcher.js",
-    "watch:tests": "npm run bootstrap && node scripts/watcher.js"
+    "watch:tests": "npm run bootstrap && tsc --build test/tsconfig.json -w & tsc --build test/tsconfig-node.json -w"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
