--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,7 +15,7 @@ parserOptions:
   sourceType: module
 rules:
   indent: off
-  max-len: [warn, 120]
+  max-len: off # clang-format fixes line lengths
   no-new: warn
   quotes: [error, single, {"avoidEscape": true}]
   no-var: error
@@ -33,6 +33,7 @@ rules:
   valid-jsdoc: off
 
   prefer-const: error
+  comma-dangle: off
 
   # Rules for our mocha unit tests. Note that even though we use mocha, we model our unit tests
   # after frameworks such as tape and ava, which encourage modern paradigms, seek to minimize
