update eslint plugins

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -13,6 +13,9 @@ plugins:
 parserOptions:
   ecmaVersion: 2017
   sourceType: module
+settings:
+  wc:
+    elementBaseClasses: ["BaseElement"]
 rules:
   indent: [warn, 2]
   max-len: [warn, 120]
