Print CSS Custom Properties of a Sass file
Prints selector, property, and fallback value for the CSS Custom
Properties in a Sass file

Example usage:
```
./scripts/print-css-custom-properties.js packages/snackbar/src/mwc-snackbar.scss
```

Example output:
```css
slot[name=action]::slotted(mwc-button) { --mdc-theme-primary: var(--mdc-snackbar-action-color, #bb86fc) }
```

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-node-resolve": "^4.0.1",
     "sass": "^1.17.4",
+    "shady-css-parser": "^0.1.0",
     "sinon": "^7.3.1",
     "tachometer": "^0.4.9",
     "typescript": "^3.4.1"
