--- a/packages/textarea/package.json
+++ b/packages/textarea/package.json
@@ -10,7 +10,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.6.0",
-    "@material/mwc-textfield": "^0.6.0"
+    "@material/mwc-textfield": "^0.6.0",
+    "@material/textfield": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
