--- a/packages/floating-label/package.json
+++ b/packages/floating-label/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/floating-label": "^3.0.0"
+    "@material/floating-label": "^3.0.0",
+    "lit-html": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
