--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ addons:
   firefox: latest
   chrome: stable
 
+before_script:
+  - npm run build
+  - npm run format && git diff --exit-code || (echo -e '\n\033[31mERROR:\033[0mProject is not formatted. Please run "npm run format".' && false)
 script:
   - npm run lint
   - npm test
