--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "watch:tests": "npm run build && tsc --build test/tsconfig.json -w & tsc --build test/tsconfig-node.json -w"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.0",
     "@types/command-line-args": "^5.0.0",
     "@types/command-line-usage": "^5.0.1",
+    "@types/mocha": "^5.2.7",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "@webcomponents/webcomponentsjs": "^2.2.8",
