--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "npm run lint:typescript && npm run lint:lit",
     "lint:typescript": "eslint \"packages/**/*.ts\"",
     "lint:lit": "lit-analyzer \"packages/**/*.ts\" --strict --quiet",
-    "test": "karma start --single-run",
+    "test": "karma-proxy start --single-run",
     "test:bench": "node test/lib/benchmark/cli.js",
     "postinstall": "./scripts/bootstrap.sh",
     "build": "npm run build:styling && npm run build:typescript -- --verbose",
@@ -26,7 +26,7 @@
     "static-urlify-readme-images": "npm run build:scripts && node scripts/tsc-out/static-urlify-readme-images.js packages/*/README.md",
     "prepack": "npm run build && npm run static-urlify-readme-images",
     "watch": "npm run build && node scripts/watcher.js",
-    "watch:tests": "npm run build && tsc --build test/tsconfig.json -w & tsc --build test/tsconfig-node.json -w"
+    "watch:tests": "tsc --build test/tsconfig.json -w & tsc --build test/tsconfig-node.json -w"
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
@@ -62,6 +62,10 @@
     "karma-rollup-preprocessor": "^6.1.2",
     "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "koa": "^2.8.1",
+    "koa-karma-proxy": "^1.0.0-pre.4",
+    "koa-mount": "^4.0.0",
+    "koa-node-resolve": "^1.0.0-pre.6",
     "lerna": "^3.13.1",
     "lit-analyzer": "^1.1.7",
     "mocha": "^5.0.0",
