--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "koa": "^2.8.1",
+    "koa-esm-transform": "^1.0.0-pre.1",
     "koa-karma-proxy": "^1.0.0-pre.4",
     "koa-mount": "^4.0.0",
     "koa-node-resolve": "^1.0.0-pre.6",
+    "koa-static": "^5.0.0",
     "lerna": "^3.13.1",
     "lit-analyzer": "^1.1.7",
     "mocha": "^5.0.0",
