--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/mwc-notched-outline",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "",
   "main": "mwc-notched-outline.js",
   "repository": {
@@ -14,10 +14,10 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/mwc-base": "^0.7.0",
     "@material/notched-outline": "^3.0.0",
-    "@material/theme": "^3.0.0",
     "@material/shape": "^3.0.0",
-    "@material/mwc-base": "^0.6.0"
+    "@material/theme": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
