--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -3,6 +3,7 @@
   "version": "0.7.0",
   "description": "",
   "main": "mwc-fab.js",
+  "module": "mwc-fab.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/material-components/material-components-web-components.git",
