Import TypeScript helpers from tslib, instead of inlining. (#439)
Published JavaScript files no longer include inlined TypeScript helpers such as `__decorate`. Instead, helpers are now imported from the `tslib` module dependency. This reduces code size by allowing multiple components to share the same helpers, and eliminates "this has been rewritten to undefined" errors from Rollup.

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -18,7 +18,8 @@
     "@material/button": "^3.0.0",
     "@material/mwc-base": "^0.7.0",
     "@material/mwc-icon": "^0.7.1",
-    "@material/mwc-ripple": "^0.7.1"
+    "@material/mwc-ripple": "^0.7.1",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
