--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -12,7 +12,8 @@
     "@material/base": "^3.0.0",
     "@material/dom": "^3.1.0",
     "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
