--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@material/checkbox": "^3.0.0",
     "@material/mwc-base": "^0.7.0",
-    "@material/mwc-ripple": "^0.7.1"
+    "@material/mwc-ripple": "^0.7.1",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
