--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -19,6 +19,7 @@
     "@material/drawer": "^3.0.0",
     "@material/mwc-base": "^0.7.0",
     "blocking-elements": "^0.1.0",
+    "tslib": "^1.10.0",
     "wicg-inert": "^2.1.3"
   },
   "publishConfig": {
