--- a/packages/formfield/package.json
+++ b/packages/formfield/package.json
@@ -16,7 +16,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/form-field": "^3.0.0",
-    "@material/mwc-base": "^0.7.0"
+    "@material/mwc-base": "^0.7.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
