--- a/packages/icon-button-toggle/package.json
+++ b/packages/icon-button-toggle/package.json
@@ -19,7 +19,8 @@
     "@material/mwc-base": "^0.7.0",
     "@material/mwc-icon": "^0.7.1",
     "@material/mwc-icon-button": "^0.7.1",
-    "@material/mwc-ripple": "^0.7.1"
+    "@material/mwc-ripple": "^0.7.1",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
