--- a/packages/line-ripple/package.json
+++ b/packages/line-ripple/package.json
@@ -13,7 +13,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/line-ripple": "^3.0.0",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
