--- a/packages/slider/package.json
+++ b/packages/slider/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.7.0",
     "@material/slider": "^3.0.0",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
