--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.7.0",
     "@material/mwc-ripple": "^0.7.1",
-    "@material/switch": "^3.0.0"
+    "@material/switch": "^3.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
