--- a/packages/tab-indicator/package.json
+++ b/packages/tab-indicator/package.json
@@ -17,7 +17,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.7.0",
-    "@material/tab-indicator": "^3.0.0"
+    "@material/tab-indicator": "^3.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
