--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@material/dom": "^3.1.0",
     "@material/mwc-base": "^0.7.0",
-    "@material/tab-scroller": "^3.0.0"
+    "@material/tab-scroller": "^3.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
