--- a/packages/tab/package.json
+++ b/packages/tab/package.json
@@ -20,7 +20,8 @@
     "@material/mwc-icon": "^0.7.1",
     "@material/mwc-ripple": "^0.7.1",
     "@material/mwc-tab-indicator": "^0.7.1",
-    "@material/tab": "^3.0.0"
+    "@material/tab": "^3.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
