--- a/packages/textarea/package.json
+++ b/packages/textarea/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.7.0",
     "@material/mwc-textfield": "^0.7.1",
-    "@material/textfield": "^3.0.0"
+    "@material/textfield": "^3.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
