--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -19,7 +19,8 @@
     "@material/shape": "^3.0.0",
     "@material/textfield": "^3.0.0",
     "@material/theme": "^3.0.0",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public"
